# attractors

./: .gitignore  Cargo.toml  README.md
cache/clifford/: special.txt
src/: attractors.rs  main.rs
