[package]
name = "attractors"
version = "0.1.0"
edition = "2021"
authors = ["Boyd Kane"]
description = "Generate, visualise, and explore strange attractor visually"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
minifb = "0.20.0"
palette = "0.6.0"
